@@ -1,20 +1,23 @@
-package com.pfe.backend.services.organisateur;
+package com.ouadia.rovista1.services.organisateur;
 
-import com.pfe.backend.dtos.organisateur.OrgStatisticsDTO;
-import com.pfe.backend.entities.Evenement;
-import com.pfe.backend.entities.enums.StatutEvenement;
-import com.pfe.backend.entities.enums.StatutPaiement;
-import com.pfe.backend.entities.enums.StatutReservation;
-import com.pfe.backend.repositories.EventRepository;
-import com.pfe.backend.repositories.ReservationRepository;
+import com.ouadia.rovista1.dtos.organisateur.OrgStatisticsDTO;
+import com.ouadia.rovista1.entities.Evenement;
+import com.ouadia.rovista1.entities.enums.StatutEvenement;
+import com.ouadia.rovista1.entities.enums.StatutPaiement;
+import com.ouadia.rovista1.entities.enums.StatutReservation;
+import com.ouadia.rovista1.repositories.EventRepository;
+import com.ouadia.rovista1.repositories.ReservationRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true) // Best practice for optimization in read-only service methods
 public class OrganizerStatisticsService {
 
     private final EventRepository eventRepo;
@@ -22,71 +25,86 @@ public class OrganizerStatisticsService {
 
     public OrgStatisticsDTO getStatistics(Long orgId) {
 
-        Double totalRevenue      = eventRepo.totalRevenueByOrganizer(orgId, StatutPaiement.VALIDE);
-        long   totalParticipants = eventRepo.totalParticipantsByOrganizer(orgId, StatutEvenement.APPROUVE);
-        long   activeEvents      = eventRepo.countByOrganisateurIdAndStatutEvenement(orgId, StatutEvenement.APPROUVE);
+        // 1. Safe Null Handling for Total Revenue
+        Double rawRevenue = eventRepo.totalRevenueByOrganizer(orgId, StatutPaiement.VALIDE);
+        Double totalRevenue = (rawRevenue != null) ? rawRevenue : 0.0;
 
-        // Taux de remplissage moyen
+        long totalParticipants = eventRepo.totalParticipantsByOrganizer(orgId, StatutEvenement.APPROUVE);
+        long activeEvents      = eventRepo.countByOrganisateurIdAndStatutEvenement(orgId, StatutEvenement.APPROUVE);
+
+        // 2. Fetch approved events (Make sure this query fetch-joins reservations to avoid N+1 issues!)
         List<Evenement> approvedEvents = eventRepo.findByOrganizerWithFilters(
-            orgId, null, StatutEvenement.APPROUVE, PageRequest.of(0, 200)
+                orgId, null, StatutEvenement.APPROUVE, PageRequest.of(0, 200)
         ).getContent();
 
+        // 3. Taux de remplissage moyen (Calculated safely)
         double avgFillRate = approvedEvents.stream()
-            .filter(e -> e.getCapacite() > 0)
-            .mapToDouble(e -> {
-                long p = e.getReservations() != null
-                    ? e.getReservations().stream()
-                        .filter(r -> r.getStatut() == StatutReservation.CONFIRME)
-                        .count()
-                    : 0;
-                return (p * 100.0) / e.getCapacite();
-            })
-            .average().orElse(0.0);
+                .filter(e -> e.getCapacite() > 0)
+                .mapToDouble(e -> {
+                    long confirmedReservations = e.getReservations() != null
+                            ? e.getReservations().stream()
+                            .filter(r -> r.getStatut() == StatutReservation.CONFIRME)
+                            .count()
+                            : 0;
+                    return (confirmedReservations * 100.0) / e.getCapacite();
+                })
+                .average()
+                .orElse(0.0);
+        Long totalReservations = approvedEvents.stream()
+                .flatMap(e -> e.getReservations().stream())
+                .filter(r -> r.getStatut() == StatutReservation.CONFIRME)
+                .count();
 
-        // Revenus par événement
+        int totalCapacity = approvedEvents.stream()
+                .mapToInt(Evenement::getCapacite)
+                .sum();
+
+        double fillRate = totalCapacity > 0
+                ? (totalReservations * 100.0) / totalCapacity
+                : 0.0;
+
+        // 4. Revenus par événement
         List<OrgStatisticsDTO.RevenueItem> revenueByEvent =
-            eventRepo.revenueByEvent(orgId, StatutPaiement.VALIDE).stream()
-                .map(row -> new OrgStatisticsDTO.RevenueItem(
-                    (String) row[0],
-                    ((Number) row[1]).doubleValue()
-                )).toList();
+                eventRepo.revenueByEvent(orgId, StatutPaiement.VALIDE).stream()
+                        .map(row -> new OrgStatisticsDTO.RevenueItem(
+                                (String) row[0],
+                                row[1] != null ? ((Number) row[1]).doubleValue() : 0.0
+                        )).toList();
 
-        // Remplissage par événement
+        // 5. Remplissage par événement (Reusing the calculation cleanly)
         List<OrgStatisticsDTO.FillRateItem> fillRateByEvent =
-            approvedEvents.stream().map(e -> {
-                int p = (int) (e.getReservations() != null
-                    ? e.getReservations().stream()
-                        .filter(r -> r.getStatut() == StatutReservation.CONFIRME)
-                        .count()
-                    : 0);
-                return new OrgStatisticsDTO.FillRateItem(
-                    e.getTitre(), p, e.getCapacite() != 0 ? e.getCapacite() : 0
-                );
-            }).toList();
+                approvedEvents.stream().map(e -> {
+                    int confirmedCount = (int) (e.getReservations() != null
+                            ? e.getReservations().stream()
+                            .filter(r -> r.getStatut() == StatutReservation.CONFIRME)
+                            .count()
+                            : 0);
 
-        // Réservations par mois (6 derniers mois)
+                    // Avoid displaying events with invalid 0 capacity breaking UI expectations
+                    int capacity = Math.max(e.getCapacite(), 0);
+
+                    return new OrgStatisticsDTO.FillRateItem(
+                            e.getTitre(), confirmedCount, capacity
+                    );
+                }).toList();
+
+        // 6. Réservations par mois
         List<OrgStatisticsDTO.MonthItem> bookingsByMonth =
-            reservationRepo.bookingsByMonth(orgId).stream()
-                .map(row -> new OrgStatisticsDTO.MonthItem(
-                    (String) row[0],
-                    ((Number) row[1]).longValue()
-                )).toList();
-        // Dans votre service
-//        List<Map<String, Object>> bookingsByMonth = rawResults.stream()
-//                .map(row -> Map.of(
-//                        "month", row[0],
-//                        "count", row[1]
-//                ))
-//                .collect(Collectors.toList());
+                reservationRepo.bookingsByMonth(orgId).stream()
+                        .map(row -> new OrgStatisticsDTO.MonthItem(
+                                (String) row[0],
+                                row[1] != null ? ((Number) row[1]).longValue() : 0L
+                        )).toList();
 
-        return OrgStatisticsDTO.builder()
-                .totalRevenue(totalRevenue)
-                .totalParticipants(totalParticipants)
-                .avgFillRate(avgFillRate)
-                .activeEvents(activeEvents)
-                .revenueByEvent(revenueByEvent)
-                .fillRateByEvent(fillRateByEvent)
-                .bookingsByMonth(bookingsByMonth)
-                .build();
+        return new OrgStatisticsDTO(
+                totalRevenue,
+                totalParticipants,
+                //avgFillRate,              
+                totalReservations,
+            activeEvents,
+            revenueByEvent,
+            fillRateByEvent,
+            bookingsByMonth
+        );
     }
 }
